--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,15 +9,18 @@ body {
     font-family: Arial, sans-serif;
     color: #333;
     background-color: #f9f9f9;
-    display: flex; /* Use flexbox for layout */
-    flex-direction: column; /* Stack children vertically */
-    min-height: 100vh; /* Ensure full viewport height */
+    display: flex; 
+    flex-direction: column; 
+    min-height: 100vh; 
 }
 
 /* Header styles */
-header {
-    background-color: #007bff;
-    padding: 10px 0;
+.header {
+    background-image: url("{% cloudinary 'https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809874/fork.jpg' %}");
+    background-size: cover;
+    background-position: center;
+    color: white;
+    height: 30vh; 
 }
 
 nav ul {
@@ -32,7 +35,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: #fff; /* Change link color to white */
+    color: #fff; 
 }
 
 nav ul li a:hover {
@@ -56,5 +59,5 @@ footer {
     color: #fff;
     padding: 20px 0;
     text-align: center;
-    margin-top: auto; /* Push footer to the bottom */
+    margin-top: auto; 
 }
