--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,8 @@
 <body>
     <!--  navigation within header -->
     <header class="header">
-        {% include 'navigation.html' %}
+        <h1> THE FORK RESTAURANT</h1>
+        {% include 'navigation.html' %}   
     </header>
     
     <!-- Home section -->
