--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -3,8 +3,10 @@
     <ul>
         <li><a href="{% url 'home' %}">Home</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
+        <li><a href="{% url 'menu' %}">Menu</a></li>
         <li><a href="{% url 'contact' %}">Contact</a></li>
         <li><a href="{% url 'reservation' %}">Book a Table</a></li>
         <li><a href="{% url 'reviews' %}">Reviews</a></li> 
+        <li><a href="{% url 'gallery' %}">Gallery</a></li>
     </ul>
 </nav>
