added the gallery page for the website

--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,14 +1,31 @@
+<!-- gallery.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
-    <!-- Add any necessary CSS or JavaScript -->
+    <!-- Link to the CSS file for gallery styles -->
+    <link rel="stylesheet" type="text/css" href="/static/css/gallery.css">
+
 </head>
 <body>
-    <!-- Gallery content goes here -->
-    <h1>Gallery</h1>
-    <!-- Add images, text, or other content as needed -->
+    <div class="gallery-container">
+        <!-- Cloudinary image URLs -->
+        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809946/topviewfood_o5v9ga.jpg" alt="topview food">
+        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809943/steak_u2plrv.jpg" alt="steak">
+        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809941/slicedcake_jajzwj.jpg" alt="sliced cake">
+        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809939/topviewfood2_r8skfs.jpg" alt="topview food2">
+        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809936/salad_owwemr.jpg" alt="salad">
+        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809918/pasta2_yytvcb.jpg" alt="pasta">
+        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809869/coffee_igmcho.jpg" alt="coffee">
+        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809789/avocado_phzv5b.jpg" alt="avocado toast">
+        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809898/location3_qr2l8j.jpg" alt="location inside">
+        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809898/location3_qr2l8j.jpg" alt="outdoors">
+        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809865/cake_pvhl8p.jpg" alt="cake">
+        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809862/bbq_jfhcbs.jpg" alt="barbeque">
+
+    </div>
 </body>
 </html>
