added a contact page and google map

--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -10,6 +10,18 @@
     <link rel="stylesheet" type="text/css" href="/static/css/gallery.css">
 
 </head>
+ <!-- Header with navigation link -->
+ <header>
+    <nav>
+        <ul>
+            <li>
+                <div class="home-link-box">
+                    <a href="{% url 'home' %}">Home</a>
+                </div>
+            </li>
+        </ul>
+    </nav>
+</header>
 <body>
     <div class="gallery-container">
         <!-- Cloudinary image URLs -->
@@ -21,10 +33,12 @@
         <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809918/pasta2_yytvcb.jpg" alt="pasta">
         <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809869/coffee_igmcho.jpg" alt="coffee">
         <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809789/avocado_phzv5b.jpg" alt="avocado toast">
-        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809898/location3_qr2l8j.jpg" alt="location inside">
+        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809881/insidelocation2_pnsyap.jpg" alt="location inside">
         <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809898/location3_qr2l8j.jpg" alt="outdoors">
         <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809865/cake_pvhl8p.jpg" alt="cake">
         <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708809862/bbq_jfhcbs.jpg" alt="barbeque">
+        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708195360/samples/food/dessert.jpg" alt="dessert">
+        <img class="gallery-image" src="https://res.cloudinary.com/dh5i9qtjf/image/upload/v1708195362/samples/food/pot-mussels.jpg" alt="pot-mussels">
 
     </div>
 </body>
