--- a/templates/reservation.html
+++ b/templates/reservation.html
@@ -7,9 +7,10 @@
     {% load static %}
     {{ block.super }}
     <link rel="stylesheet" href="{% static 'css/forms.css' %}">
-    {% endblock head %}
+    <script src="{% static 'js/reservation.js' %}"></script>
+{% endblock head %}
 
-    {% block content %}
+{% block content %}
     
 <div class="container mt-5">
     <div class="row justify-content-center">
@@ -54,51 +55,4 @@
         </div>
     </div>
 </div>
-
-<!-- Include forms.css -->
-<link rel="stylesheet" href="{% static 'css/forms.css' %}">
-
-<!-- Include jQuery from CDN -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-<script>
-$(document).ready(function() {
-    // Handle form submission
-    $('#reservationForm').submit(function(event) {
-        event.preventDefault(); // Prevent the form from submitting normally
-        
-        // Serialize form data
-        var formData = $(this).serialize();
-        
-        // Send an AJAX request to handle form submission
-        $.ajax({
-            type: 'POST',
-            url: '/reservation/', // Update the URL with your endpoint
-            data: formData,
-            success: function(response) {
-                // Populate the modal with the confirmation details
-                $('#confirmationModal .modal-body').html(response);
-                // Show the modal
-                $('#confirmationModal').modal('show');
-            },
-            error: function(xhr, errmsg, err) {
-                console.log(xhr.status + ": " + xhr.responseText); // Log any errors
-            }
-        });
-    });
-});
-</script>
-
-<!-- Your script for generating time options -->
-<script>
-$(document).ready(function() {
-    // Generate time options from 5 pm to 11 pm
-    var selectTime = $('#time');
-    for (var hour = 17; hour <= 23; hour++) {
-        var displayHour = (hour % 12 == 0) ? 12 : hour % 12; // Convert to 12-hour format
-        var ampm = (hour < 12 || hour == 24) ? 'AM' : 'PM';
-        selectTime.append($('<option>').val(hour).text(displayHour + ':00 ' + ampm));
-    }
-});
-</script>
 {% endblock %}
